<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    tools:context=".activity.MainActivity"
    tools:layout_editor_absoluteY="81dp">

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"></LinearLayout>

            </LinearLayout>

            <ImageView
                android:id="@+id/logo"
                android:layout_width="138dp"
                android:layout_height="120dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="-5dp"
                app:srcCompat="@drawable/logo"
                tools:layout_editor_absoluteX="123dp"
                tools:layout_editor_absoluteY="42dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="233dp"
                android:layout_marginTop="20dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="Login"
                    android:textColor="@android:color/background_dark"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    tools:layout_editor_absoluteX="36dp"
                    tools:layout_editor_absoluteY="230dp" />

                <LinearLayout
                    android:id="@+id/llCampos"
                    android:layout_width="match_parent"
                    android:layout_height="21dp"
                    android:layout_marginTop="20dp"
                    android:orientation="horizontal"
                    tools:layout_editor_absoluteX="29dp"
                    tools:layout_editor_absoluteY="88dp">

                    <ImageView
                        android:id="@+id/iconEmail"
                        android:layout_width="21dp"
                        android:layout_height="18dp"
                        app:srcCompat="@drawable/ic_mail_outline_black_24dp"
                        tools:layout_editor_absoluteX="29dp"
                        tools:layout_editor_absoluteY="115dp" />

                    <TextView
                        android:id="@+id/tvCampoEmail"
                        android:layout_width="47dp"
                        android:layout_height="18dp"
                        android:text="Email"
                        android:textAlignment="center"
                        android:textColor="@android:color/background_dark"
                        tools:layout_editor_absoluteX="65dp"
                        tools:layout_editor_absoluteY="115dp" />

                </LinearLayout>

                <EditText
                    android:id="@+id/etEmailLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="Digite seu email"
                    android:inputType="textEmailAddress"
                    android:textSize="18sp"
                    tools:layout_editor_absoluteX="29dp"
                    tools:layout_editor_absoluteY="109dp" />

                <LinearLayout
                    android:id="@+id/llCampoSenha"
                    android:layout_width="match_parent"
                    android:layout_height="21dp"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal"
                    tools:layout_editor_absoluteX="29dp"
                    tools:layout_editor_absoluteY="88dp">

                    <ImageView
                        android:id="@+id/iconPassword"
                        android:layout_width="21dp"
                        android:layout_height="18dp"
                        app:srcCompat="@drawable/ic_lock_outline_black_24dp"
                        tools:layout_editor_absoluteX="29dp"
                        tools:layout_editor_absoluteY="115dp" />

                    <TextView
                        android:id="@+id/tvCampoSenha"
                        android:layout_width="47dp"
                        android:layout_height="18dp"
                        android:text="Senha"
                        android:textAlignment="center"
                        android:textColor="@android:color/background_dark"
                        tools:layout_editor_absoluteX="65dp"
                        tools:layout_editor_absoluteY="115dp" />

                </LinearLayout>

                <EditText
                    android:id="@+id/etSenhaLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="Digite sua senha"
                    android:inputType="textPassword"
                    android:textSize="18sp"
                    tools:layout_editor_absoluteX="29dp"
                    tools:layout_editor_absoluteY="109dp" />

            </LinearLayout>

            <Button
                android:id="@+id/btnEntrar"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="35dp"
                android:background="@drawable/selector_buttons_green"
                android:clickable="true"
                android:freezesText="false"
                android:onClick="onClickButtonEntrar"
                android:text="Entrar"
                android:textAllCaps="false"
                android:textColor="@android:color/background_light"
                android:textIsSelectable="false"
                android:textSize="20sp" />

            <LinearLayout
                android:id="@+id/llFooter"
                android:layout_width="match_parent"
                android:layout_height="58dp"
                android:layout_marginTop="35dp"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout4">

                <TextView
                    android:id="@+id/tvLabelStatic01"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Ainda não possui cadastro?"
                    android:textColor="@android:color/black"
                    tools:layout_editor_absoluteX="36dp"
                    tools:layout_editor_absoluteY="423dp" />

                <TextView
                    android:id="@+id/tvClicableTelaCadastro"
                    android:layout_width="90dp"
                    android:layout_height="31dp"
                    android:clickable="true"
                    android:onClick="nextTelaCadastro"
                    android:text="Clique Aqui!"
                    android:textAlignment="center"
                    android:textColor="@color/colorLink" />

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>